# Recruitment-Multi-Agent-System

./: .gitignore  README.md  pyproject.toml
chat_bot_agent/: agent.py
chat_bot_agent/sub_agents/pipeline_agent/: agent.py
chat_bot_agent/tools/: tools.py
components/: ai_matching_component.py  ats_component.py  base_component.py  pipeline.py  voice_bot_component.py
config/: secrets.example.py
launch_mocks/: check_services.py  run_mocks.py  run_mocks.sh
models/: candidate_resume.py  input_schema.py  output_schema_for_agent.py
server_agent/: process_responces.py  server_for_agent.py
services/agent/: new_can.json  session.py
services/agent/resume_search_llm/: agent.py
services/ai_matching_service/ai_matching_client/: client.py
services/ai_matching_service/ai_matching_server/: server.py
services/atsservice/ats_client/: client.py
services/atsservice/ats_server/: candidates_2.json  server.py
services/calling_agent/: server.py
src/maya_ai_prototype/: __init__.py
streamlit/: server.py  streamlit.py
task_manager/: server.py  url.py
